# BOLD

./: .dockerignore  .gitignore  404.html  Dockerfile  Makefile  README.md  docker-compose.full.yml  docker-compose.standalone.yml  docker-compose.yml  generate.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  image.yml
CONTRIBUTING/: index.html
architecture/: index.html
backend/: .env.example
backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/data/: foaf.csv  foaf.tsv  models.py  owl.csv  rdf.csv  rdfs.csv  urls.py  views.py
backend/data/migrations/: 0001_initial.py
backend/data/services/: bold_cli.py  lodc_api.py  stardog_api.py  stardog_cli.py
backend/data/tasks/: imports.py  processing.py
backend/datadiscovery/: serializers.py  urls.py  views.py
backend/datasets/: models.py  serializers.py  urls.py  views.py
backend/datasets/migrations/: 0001_initial.py  0002_dataset_database_dataset_description.py  0003_dataset_namespaces.py  0004_alter_dataset_source.py  0005_dataset_import_task_dataset_state.py  0006_rename_database_dataset_local_database_dataset_mode_and_more.py  0007_alter_dataset_mode_alter_dataset_search_mode.py  0008_alter_dataset_search_mode.py  0009_create_wikidata_dataset.py
backend/datasets/services/: blazegraph.py  bold_cli.py  meilisearch.py  query.py  (+5 more)
backend/frontend/: urls.py  views.py
backend/loading/: tasks.py
backend/notebook/: consumers.py  models.py  routing.py
backend/profiling/: tests.py  urls.py  views.py
backend/reports/: consumers.py  models.py  permissions.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/shared/: dict.py  logging.py  models.py  paths.py  query.py  random.py  serialization.py  shell.py  websocket.py
backend/tasks/: __init__.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/users/: middleware.py  mixins.py  permissions.py  serializers.py  urls.py  views.py
deployment/: index.html
dev/: api.http  gpt.txt  jetty.xml  querying.sparql
dev/blazegraph/: RWStore.properties
dev/docker/: entrypoint.sh  supervisord.conf
dev/neo4j/: importing.cypher
dev/postgres/: Dockerfile
dev/queries/: owl.tsv  rdf.tsv  rdfs.tsv  schema_export.sparql  wikidata.sparql
dev/spark/: Dockerfile
dev/stardog/: commands.sh
docs/: architecture.md  deployment.md  generate.py  index.md  installation.md  structure.md  user_manual.md
frontend/: .gitignore  craco.config.js  next.config.js  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
installation/: index.html
reference/SUMMARY/: index.html
reference/datasets/: index.html
reference/reports/: index.html
reference/shared/: index.html
reference/tasks/: index.html
reference/users/: index.html
search/: search_index.json
storage/export/: sub.sparql
structure/: index.html
tools/: .dockerignore  Cargo.toml  Makefile
tools/bold_cli/: Cargo.toml
tools/bold_cli/src/: main.rs
tools/bold_cli/src/subcommands/: build_index.rs  mod.rs  search.rs
tools/bold_cli/src/utils/: query.rs
user_manual/: index.html
(+358 files in other folders)
