[tool.poetry]
name = "bold"
version = "0.1.0"
description = ""
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pystardog = "^0.11.1"
celery = "^5.2.6"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
typing-extensions = "^4.2.0"
tantivy = "^0.13.2"
psycopg2 = "^2.9.3"
marshmallow-dataclass = "^8.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-worker = ""