[tool.poetry]
name = "bold"
version = "0.1.0"
description = ""
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pystardog = "^0.11.1"
celery = "^5.2.6"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
typing-extensions = "^4.2.0"
psycopg2 = "^2.9.3"
simple-parsing = "^0.0.20"
channels = "^3.0.4"
channels-postgres = "^0.0.4"
SQLAlchemy = "^1.4.37"
drf-yasg = "^1.20.0"
django-filter = "^21.1"
openai = "^0.20.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.0"
pydotplus = "^2.0.2"
PyJWT = "^2.4.0"
djangorestframework-simplejwt = "^5.2.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.20.5"
pymantic = {git = "https://github.com/blazegraph/blazegraph-python.git"}
meilisearch = "^0.31.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocstrings = "^0.19.0"
mkdocs-gen-files = "^0.3.5"
mkdocstrings-python = "^0.7.1"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-worker = ""