[package]
name = "bold-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
tantivy = "0.17.0"
#oxigraph = "*"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

