[package]
name = "bold-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "3.2.6", features = ["derive"] }
csv = "1.1.6"
tantivy = "0.17.0"
#oxigraph = "*"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
fancy-regex = "0.10.0"
url = "2.2.2"